Vision Paper: Checkpointing work.

--- a/aber/vision/references.bib
+++ b/aber/vision/references.bib
@@ -121,3 +121,21 @@
   year={2008},
   publisher={Springer}
 }
+
+@incollection{lin2004fast,
+  title={Fast object detection with occlusions},
+  author={Lin, Yen-Yu and Liu, Tyng-Luh and Fuh, Chiou-Shann},
+  booktitle={Computer Vision-ECCV 2004},
+  pages={402--413},
+  year={2004},
+  publisher={Springer}
+}
+
+@inproceedings{garcia2008effective,
+  title={Effective pedestrian detection and counting at bus stops},
+  author={Garc{\'\i}a-Bunster, Guillermo and Torres-Torriti, Miguel},
+  booktitle={Robotic Symposium, 2008. LARS'08. IEEE Latin American},
+  pages={158--163},
+  year={2008},
+  organization={IEEE}
+}
