--- a/aber/vision/vision_paper.tex
+++ b/aber/vision/vision_paper.tex
@@ -127,7 +127,7 @@
 % *** GRAPHICS RELATED PACKAGES ***
 %
 \ifCLASSINFOpdf
-  % \usepackage[pdftex]{graphicx}
+  \usepackage[pdftex]{graphicx}
   % declare the path(s) where your graphic files are
   % \graphicspath{{../pdf/}{../jpeg/}}
   % and their extensions so you won't have to specify these with
@@ -261,7 +261,6 @@
 % be obtained at:
 % http://www.ctan.org/tex-archive/obsolete/macros/latex/contrib/subfigure/
 % subfigure.sty has been superceeded by subfig.sty.
-
 
 
 %\usepackage[caption=false]{caption}
@@ -422,7 +421,7 @@ Email: slj11@aber.ac.uk}
 
 
 
-\section{Introduction}
+\section{Introduction} \label{sec:introduction}
 This paper examines the Viola-Jones face detection algorithm \cite{viola2004robust} to the application of counting people in the real world. The Viola-Jones algorithm presented in \cite{viola2004robust} proposes an efficient method of performing face detection at frame rate with reasonably accurate results.
 
 Detecting faces is a major challenge in the field of computer vision, and one which has many practical applications. Accurately determining whether a scene or photograph contains a face is provides many challenges. Yang et al. \cite{yang2002detecting} lists a number of different factors affecting human face detection. Faces typically have a wide degree of variation. They have different prominent facial features, skin colour, scars, facial hair, and hair styles. The pose also causes issues. The side of a face is very different from the frontal view. Occlusions prove another major obstacle. In a crowded scene it is easy for a face to be partially or wholly excluded, glasses and sun glasses are also a common source of occlusions. The quality of the capture including the lighting, focus, and contrast can affect the image quality. The characteristics of the camera such as the lenses and sensors also affect final capture.
@@ -444,14 +443,41 @@ Viola-Jones object detection represents a major breakthrough in the computer vis
 
 At the time of publication of the technique had results that had ``detection and false positive rates which [were] equivalent to the best published results'' \cite{viola2004robust} but executed in in a much smaller amount of time. Comparisons between the major approaches published at the time are given at the end of the paper, but the results are not entirely definitive due to most approaches not providing a full receiver operating characteristic (ROC) curves for their classifiers or did not publish there best results. In the case of Sung and Poggio \cite{sung1998example} only the MIT part of the common dataset was used (as the CMU dataset did not yet exist). In spite of this, the authors show that their technique provides roughly equivalent levels of performance given the available data. The authors note that the best performance was achieved using a voting regime between three classifiers trained with different negative examples, different negative vs. positive errors, and different criteria for also positives vs. classifier size.
 
-Unfortunately the Viola-Jones has quite a few failure modes in which it will give a high number of either false positives or false negatives. One of the biggest drawbacks of the vanilla implementation presented in the paper is that it can only detect frontal images of faces. Faces viewed for the side or in a different rotation or orientation are unlikely to be correctly detected. The technique can be used to correct detect faces as viewed from the side profile by training a different classifier with sufficient positive and negative examples. Both sides of the face could be accounted for by training a classifier for one side of the face, testing the image then flipping the image and running the classifier again to account for the other side. Similar problems occur when the classifier is presented with faces that are rotated, either in or out of the image plane. Jones and Viola \cite{jones2003fast} attempted to alleviate these issues by training multiple classifiers for each of the poses and using additional diagonal Haar like features. The choice of classifier used is decided using a decision tree. This gives a two step approach to classification in which the first step estimates the pose and the second runs selected pose classifier.
+Unfortunately the Viola-Jones has quite a few failure modes in which it will give a high number of either false positives or false negatives. One of the biggest drawbacks of the vanilla implementation presented in the paper is that it can only detect frontal images of faces. Faces viewed for the side or in a different rotation or orientation are unlikely to be correctly detected. The technique can be used to correct detect faces as viewed from the side profile by training a different classifier with sufficient positive and negative examples. Both sides of the face could be accounted for by training a classifier for one side of the face, testing the image then flipping the image and running the classifier again to account for the other side. Similar problems occur when the classifier is presented with faces that are rotated, either in or out of the image plane. 
 
-Further work by Lienhart et al. \cite{lienhart2002extended} provides empirical evidence that better results can be obtained from the Viola-Jones approach though the use of a number of extensions such using the gentle AdaBoost algorithm in favour of the original discrete AdaBoost implementation. They also performed experiments with a broader set of Haar features which were formed from rotated versions of the original features. These appeared to produce more accurate results despite complicating the learning procedure by successfully encoding more domain knowledge into the learning procedure that it would otherwise have difficulty learning.
+These problems are largely caused by the techniques dependence on such basic features. This leads to the classic time versus complexity trade off where in order for the algorithm to perform fast enough to run practically at real time, the features need to be quick to evaluate. The basic set of features used by Viola-Jones are limited in the amount of domain knowledge they can encode in the learning procedure. The limited range of vertical and horizontal features fail to encode information about diagonal features, such as might be present in a face rotated 45 degrees out of the image plane.
 
-More recent work published by Brubaker et al. \cite{brubaker2008design} achieved improved the speed of the detector as well as reducing the training time without sacrificing accuracy.
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3in]{img/face_detect_example.jpg}
+\caption{Example of face detection using the Haar cascade in OpenCV. Occlusions of non essential areas (such as the mouth in the middle image) still result in a positive match, while occlusions of essential features such as the eyes or nose result in a false negative.}
+\label{fig:occlusions}
+\end{figure}
 
+Jones and Viola \cite{jones2003fast} attempted to alleviate these issues by training multiple classifiers for each of the poses and using additional diagonal Haar like features. The choice of classifier used is decided using a decision tree. This gives a two step approach to classification in which the first step estimates the pose and the second runs selected pose classifier.
+
+Further work by Lienhart et al. \cite{lienhart2002extended} provides empirical evidence that better results can be obtained from the Viola-Jones approach though the use of a number of extensions such using the gentle AdaBoost algorithm in favour of the original discrete AdaBoost implementation. They also performed experiments with a broader set of Haar features which were formed from rotated versions of the original features. These appeared to produce more accurate results despite complicating the learning procedure by successfully encoding more domain knowledge into the learning procedure that it would otherwise have difficulty learning. More recent work published by Brubaker et al. \cite{brubaker2008design} also showed that it is possible to improve the speed of face detection as well as reducing the training time without sacrificing accuracy.
+
+Another key failure mode with the Viola-Jones algorithm is its robustness to occlusions. This largely depends on what is occluded in the image. The two key features identified during the training of the Viola-Jones technique show that a vertical rectangular feature over the nose and a horizontal rectangular feature over the eyes are the most successful detection features for a face. This implies that Viola-Jones has some robustness against partial occlusions of non-essential areas such as covering the mouth in the middle image of figure \ref{fig:occlusions} and will still return a positive match. However, occlusions of prominent features used to classify face will result in a false negative. Tweaking the parameters of the cascade can help to increase the detection rate of the occluded image, but this has the disadvantage of subsequently increasing the false positive rate. Lin et al. \cite{lin2004fast} have experimented with additional robustness against occlusions through by a two step process consisting of reinforcement training with bootstrapping and $k$-means clustering to reduce the false positive rate and training a selection of ``occlusion cascades'' which can be checked against to in the case the regular cascade returns a negative match.
+
+The success of the Haar cascade technique is also heavily affected by the quality of the dataset used during training. Careful preprocessing is required to ensure that all of the positive examples used in training are correctly aligned and are of a similar scale. A large number of negative examples also need to be prepared to provided sufficient training against false positives. However, it is also essential that the dataset used in training contains enough variance. As mentioned in section \ref{sec:introduction} human faces contain a large amount of variation. A good dataset should therefore capture a high amount of variation while still being well formed. In the dataset used in \cite{viola2004robust} used 4916 hand labelled images randomly taken from the web. These naturally contained a high degree of variation. Some examples had moustaches and facial hair, others had glasses or sunglasses. Different ethnicities and skin tone is included as re different lighting conditions. This subsequently leads to there being enough variation on the dataset to ensure that the classifier learns the common features shared between faces and therefore generalises well.
+
+One final limitation with the Haar cascade method is the amount of time that it takes to train. This is not as much of a concern as other limitations because the important point about the Haar cascade approach is that fact that once a classifier has been trained, it is fast enough to execute at frame rate. However, the original implementation of Viola-Jones took weeks to train. Exploitation of parallelism \cite{viola2004robust} and subsequent increases in computing power have brought the training time down, but training still remains a considerable task especially when this is combined with the amount of time required to pre-process a good dataset for use in training.
+
+Despite these limitations the Haar cascade approach face detection remains one of the most popular approaches in the field. This is largely due to the fact that the method runs fast enough to be used at frame rate and therefore has a very wide variety of applications but does not need to sacrifice accuracy in order to achieve it. The framework presented in Ref. \cite{viola2004robust} is also not limited to the detection of faces. Relevant Haar features can be computed to be representative of a number of different objects, although the low complexity of these features restrict the classifier to working best with rigid body objects. The classifier also provides a small amount of robustness to partial occlusions of an object, but will fail if core features used in detection are occluded. A good dataset, with both positive and negative examples, is required to effectively train a Haar cascade but providing  a decent dataset can be acquired the classifier will work well enough for many practical purposes.
 
 \section{Application of Method} \label{sec:application-of-method}
+This section analyses the potential suitability of applying the titular method to counting people. This is a very broad question, the answer to which is largely dependant on the specifics of the application. Counting people is useful in a wide variety of circumstances. Safety applications are the among the most obvious. With automated people counting systems we could avoid disasters such as the one which occurred at the Hillsborough stadium in 1989. Customer service and management is another practical use for such a system. Knowing how many people are queueing at a checkout and alerting management to open another would be lead to more efficient management of people. Such a system would also have financial relevance, such as counting attendance to an event and making sure everyone has paid. 
+
+What components are required for a people counting system? One of the most obvious requirements is that it need to be accurate. How accurate is ``good enough'' dependant on the use. In the case of preventing overcrowding in a stadium the number of people counted does not exact, so long as a good enough estimate is achieved to know when an area is becoming over crowded. In a system that is counting people in order to charge the correct amount you would need an exact and accurate count so that customers are charged the correct price. A customer service scenario would probably demand a less accurate approximation but would still need to be accurate enough to be useful. Another key factor would be the system's robustness. Groups and crowds of people are a constantly changing and dynamic thing to monitor. Given a typical image of a group of people there is likely to be a large amount of variance in the people in the scene, including their height, body size, clothes etc. Partial or total occlusions are also highly likely especially in very crowded scenes or constantly changing scenes (such as street scene where cars are constantly passing). A successful people counter needs to be able to handle a high degree of variance in a scene as well as have some robustness against partial and total occlusions in order to be accurate enough for practical purposes. Finally, the system will most likely need to be fast. While there are likely to be circumstances where the a people counting system is useful without running in real time, the most interesting practical applications of such a system require that it operates at frame rate. Finding out that a stadium is over crowded is useless thirty minutes after the event.
+
+The practical limitations of a Haar cascade causes some immediate issues when compared with the requirements for a people counter. As mentioned in the preceding section, the basic implementation of a Haar cascade outlined in Ref. \cite{viola2004robust} uses only very basic rectangular features classify a face from a frontal position. This works well because even though there is a high degree of variance between faces almost all faces share a common structure and it is assumed that the faces to be detected will be viewed from a frontal position. These two assumptions cannot be used when applying the technique to the issues of people counting. Obviously in a real world scene it is unlikely that all of the people in a scene will be facing the directly at the camera. This could be the case for some uses, for example if the application was counting people planned photographs such as wedding photos, but it more likely to not be the case. A modified Haar cascade that has some robustness to rotations such as Ref. \cite{jones2003fast} could help, but what about situations where there are no clear faces such as people viewed from behind? Or people with hoods up and not looking towards the camera? 
+
+This suggests a classifier be trained to detect bodies and not faces in a scene. While faces are not guaranteed to be readably available in a scene, images of human bodies almost certainly will be. However, training a classifier to detect human bodies poses its one assortment of issues. With faces, each face typically has a nose and a set of eyes with the eyes being positioned horizontally above the nose. This gives a common element between all faces that a classifier that uses rigid rectangular features such as a the original implementation of a Haar classifier can be trained to detect. Human bodies on the other hand are much less rigid in there appearance. While human bodies share a degree of similarity (two arms, two legs, one torso etc.) each of these independent parts can the move independently, making the overall structure of a human body far more fluid than the structure of a face. The orientation problem is also exacerbated further when training a body detector over a face detector. A typical street scene will show people from all different angles. They may be viewed from in front, behind, or in profile. They may also be standing, sitting, or laying down. Occlusions will still be a problem for a body classifier. Obviously is a classifier is trained to detector the common features of a body (such as a torso) and these features become obscured (such as another person walking in front) the classifier will fail.
+
+However, despite these issues there is still hope for the application of the technique the problem in question. Viola et al. have themselves carried out experiments adapting the Haar cascade to the practical application of detection pedestrians \cite{viola2003detecting}. In their approach the detecting pedestrians they modify the approach take in Ref. \cite{viola2004robust} to include an additional set of diagonally shaped features. This is to try and capture some domain knowledge about diagonal shapes within an example. They also realised that motion between two frames of video can encode information whether a section of a scene contains a pedestrian. Using this they created filters which operate on the absolute difference between the two frames shifted in different directions. The Haar like features can still be computed using the integral image representation on the different images. While this approach is shown the the paper to produce decent results approach obviously assumes that you are not counting people in a static image and that people are moving through the scene. If a person stops moving then the classifier will fail to find them as difference between the images will likely be too minimal. Garcia et al. \cite{garcia2008effective} experimented with this approach in combination with background subtraction to try and focus the classifier on certain areas in the scene. Their work found poor performance due to the crowdedness and illumination conditions of their real world dataset. They concluded that a density estimation approach yielded much more positive results.
+
+
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
