Graphics: Convert report to IEEE paper format.

--- a/aber/graphics/refs.bib
+++ b/aber/graphics/refs.bib
@@ -3,5 +3,61 @@
   title = {WebGL solar system simulation},
   year = 2014,
   url = {https://github.com/samueljackson92/solar-system},
-  urldate = {2014-11-21}
+  urldate = {2014-11-17}
+}
+
+@online{glmatrix,
+	author={Brandon Jones and Colin MacKenzie},
+	title={glMatrix},
+	year=2014,
+	url={http://glmatrix.net},
+	urldate={2014-11-17}
+}
+
+@online{nexustextures,
+	author={{Solar System Scope}},
+	title={Nexus Texture Packs},
+	year=2013,
+	url={http://www.solarsystemscope.com/nexus/textures/},
+	urldate={2014-11-17}
+}
+
+@online{galaxytexture,
+	author={ESO},
+	title={The Milky Way Galaxy panorama},
+	year={2010},
+	url={http://www.sghi.info},
+	urldate={2014-11-17}
+}
+
+@online{skytexture,
+	author={Tom Patterson},
+	title={Natural Earth {III}},
+	year=2014,
+	url={http://www.shadedrelief.com/natural3/pages/clouds.html},
+	urldate={2014-11-17},
+}
+
+@online{webgl-utils,
+	author={Google},
+	title={WebGL Utils},
+	year=2011,
+	url={https://code.google.com/p/webglsamples/source/browse/book/webgl-utils.js?r=41401f8a69b1f8d32c6863ac8c1953c8e1e8eba0},
+	urldate={2014-11-17}
+}
+
+@online{classie,
+	author={David DeSandro},
+	title={Classie},
+	year=2014,
+	url={https://github.com/desandro/classie},
+	urldate=2014-11-17},
+}
+
+@online{slidingmenu,
+	author={Nick Salloum},
+	title={Slide And Push Menus With CSS3 Transitions},
+	year=2014,
+	url={http://callmenick.com/2014/03/26/slide-and-push-menus-with-css3-transitions/},
+	urldate={2014-11-17},
 }
